# FastCRUD

./: .env  .gitignore  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt
database/: __init__.py  database.py  session.py
database/interfaces/: __init__.py  base_interface.py  main_interface.py  redis_json.py  sql.py
database/models/: __init__.py  user.py
requirements/: requirements.dev.txt  requirements.txt
tests/: conftest.py  test_main.py  test_redis_json.py  test_sql.py
tests/schemas/: user.py
